[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,9 @@
                Nothing to show yet
             </div>
             <hr/>
+            <div>
+            
+            </div>
             <div class='footer'>
             </div>
         </div>
