[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,10 @@
             </div>
             <hr/>
             <div>
-            
+                <h3>Log in</h3>
+                <input type = 'text' id='username' placeholder='username'/>
+                <input type='password' id='password'/>
+                <input tpye="submit" id='submit_btn'/>
             </div>
             <div class='footer'>
             </div>
