[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
                 <h3>Log in</h3>
                 <input type = 'text' id='username' placeholder='username'/>
                 <input type='password' id='password'/>
-                <input type="submit" id='submit_btn' valur='submit'/>
+                <input type='submit' id='submit_btn' value='submit'/>
             </div>
             <div class='footer'>
             </div>
