[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,8 +20,8 @@
             <hr/>
             <div>
                 <h3>Log in</h3>
-                <input type = 'text' id='username' placeholder='username'/>
-                <input type='password' id='password'/>
+                <input type = 'text' id='username' placeholder='username'/><br>
+                <input type='password' id='password'/><br>
                 <input type='submit' id='submit_btn' value='submit'/>
             </div>
             <div class='footer'>
